@@ -25,11 +25,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- JAVA version -->
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
 
         <!-- dependencies -->
 
         <aspectj.version>1.9.6</aspectj.version>
+        <asm.version>6.2.1</asm.version>
         <awaitility.version>1.3.5</awaitility.version>
 
         <bouncycastle.version>1.67</bouncycastle.version>
@@ -60,15 +61,13 @@
         <hazelcast.version>2.6.10</hazelcast.version>
         <hamcrest.version>1.3</hamcrest.version>
 
-        <jaxb.version>2.2.11</jaxb.version>
+        <jaxb.version>2.3.3</jaxb.version>
         <jflex.version>1.6.1</jflex.version>
         <jopt-simple.version>5.0.4</jopt-simple.version>
         <jsoup.version>1.11.2</jsoup.version>
         <junit.version>4.13.1</junit.version>
         <jetty.version>9.4.35.v20201120</jetty.version>
-        <!-- TODO: [ES] update Jersey to 2.16+ (creates unmarshalling problems with Crowd)
-             "MessageBodyReader not found for media type=application/xml" -->
-        <jersey.version>2.15</jersey.version>
+        <jersey.version>2.32</jersey.version>
         <jackson.version>2.11.3</jackson.version>
 
         <log4j.version>2.14.0</log4j.version>
@@ -473,6 +472,16 @@
                 <version>${jersey.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-jaxb</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
                 <!-- don't use the Validation API in our code, use the static checks (JSR305) instead -->
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
@@ -511,17 +520,15 @@
                 </exclusions>
             </dependency>
 
-            <!-- JAXB -->
             <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-core</artifactId>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
                 <version>${jaxb.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-impl</artifactId>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
                 <version>${jaxb.version}</version>
-                <scope>runtime</scope>
             </dependency>
 
             <!-- Lucene for fulltext search -->
@@ -783,10 +790,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <release>${java.version}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <compilerArgs>
                         <arg>-Xlint</arg>
@@ -794,10 +800,18 @@
                         <arg>-Xlint:-rawtypes</arg>
                         <arg>-Xlint:-serial</arg>
                         <arg>-Xlint:-fallthrough</arg>
+                    	<arg>--add-modules</arg><arg>java.sql,java.xml</arg>
                     </compilerArgs>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                    <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>${asm.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -867,6 +881,13 @@
                         <hazelcast.phone.home.enabled>false</hazelcast.phone.home.enabled>
                     </systemPropertyVariables>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                    <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>${asm.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -874,7 +895,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <redirectTestOutputToFile>${test.redirectOutput}</redirectTestOutputToFile>
-                    <argLine>-Xmx1024m -DjvmId=${surefire.forkNumber} ${failsafe.jacoco.args}</argLine>
+                    <argLine>-Xmx1024m -DjvmId=${surefire.forkNumber} --add-modules java.sql,java.xml ${failsafe.jacoco.args}</argLine>
                     <includes>
                         <include>${test.files.integration}</include>
                     </includes>
@@ -904,12 +925,16 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+                <!-- Plugin forked from mojohaus project to add Java 11 support -->
+                <groupId>io.starter</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.8</version>
+                <version>1.12.9</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <complianceLevel>${java.version}</complianceLevel>
+                    <!-- TODO: no sources in root project causes an error, continue anyway -->
+                    <proceedOnError>true</proceedOnError>
                     <!-- [TP] This is a bit ugly part.
                         aspectjweaver, spring-context, spring-tx libs were removed from whois-rpsl/pom.xml, because they
                         pull many deps, and no aspects are/should be present in this module. By removing the libs, a lot of
@@ -937,7 +962,6 @@
                         <exclude>**/net/ripe/db/whois/common/ManualTest.java</exclude>
                     </excludes>
 
-                    <complianceLevel>${java.version}</complianceLevel>
                     <Xlint>warning</Xlint>
                     <verbose>true</verbose>
                     <forceAjcCompile>true</forceAjcCompile>
